force-app/main/default/objects/Contact/fields/Innova_Brand__c.field-meta.xml
<CustomField>
    <fullName>Innova_Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Innova Solutions</fullName>
            </value>
            <value>
                <fullName>HireGenics</fullName>
            </value>
            <value>
                <fullName>Volt</fullName>
            </value>
            <value>
                <fullName>Innova</fullName>
                <isActive>false</isActive>
                <label>Innova</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>