force-app/main/default/objects/Contact/fields/Innova_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Innova_Employee_Id__c</fullName>
    <label>Employee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>