force-app/main/default/objects/Contact/fields/Innova_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Innova_Employee_Number__c</fullName>
    <label>Employee Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>