force-app/main/default/objects/Contact/fields/Innova_Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Innova_Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>