force-app/main/default/objects/Contact/fields/Innova_Unique_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Innova_Unique_User_Id__c</fullName>
    <label>Unique User Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>