force-app/main/default/objects/Contact/fields/ISC_Disable_Case_Create__c.field-meta.xml
<CustomField>
    <fullName>ISC_Disable_Case_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Case Create</label>
    <type>Checkbox</type>
</CustomField>