force-app/main/default/objects/Contact/fields/ISC_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>ISC_Display_Name__c</fullName>
    <formula>FirstName + &quot; &quot; +  LastName + &quot; (&quot; +  Email + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>