force-app/main/default/objects/Contact/fields/ISC_Is_Employee__c.field-meta.xml
<CustomField>
    <fullName>ISC_Is_Employee__c</fullName>
    <formula>IF(ISBLANK(AccountId), false, IF( Account.RecordType.DeveloperName = &quot;PersonAccount&quot;, true, false))</formula>
    <label>Is Employee</label>
    <type>Checkbox</type>
</CustomField>