force-app/main/default/objects/Contact/fields/StatusAsOf__c.field-meta.xml
<CustomField>
    <fullName>StatusAsOf__c</fullName>
    <label>Status As Of</label>
    <type>DateTime</type>
</CustomField>