force-app/main/default/objects/Contact/fields/WorkerType__c.field-meta.xml
<CustomField>
    <fullName>WorkerType__c</fullName>
    <label>Worker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Alumnus</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>