force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Blocked__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Innova_Employee_Id__c</columns>
    <columns>Innova_Unique_User_Id__c</columns>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <columns>Innova_Active__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>CONTACT.EMAIL_BOUNCED_REASON</columns>
    <columns>ISC_Display_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>